added 3 buttons start activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MapActivity" />
+        <activity android:name=".SignInActivity" />
+        <activity android:name=".SendLocationActivity"></activity>
     </application>
 
 </manifest>
