--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     apply plugin: 'com.google.gms.google-services'
     // Firebase
     implementation 'com.google.firebase:firebase-core:16.0.0'
-    implementation 'com.google.android.gms:play-services-maps:16.0.1'
+    implementation 'com.google.firebase:firebase-database:16.0.0'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
 }
