--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
         </activity>
         <activity android:name=".MapActivity" />
         <activity android:name=".SignInActivity" />
-        <activity android:name=".SendLocationActivity"></activity>
+        <activity android:name=".SendLocationActivity" />
+        <activity
+            android:name=".ActivityChooseCountry"
+            android:label="@string/title_activity_choosecountry"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
