moving classes and chat layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,11 +34,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MapActivity"
+            android:name=".activities.MapActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SignInActivity" />
+        <activity android:name=".activities.SignInActivity" />
         <activity
-            android:name=".ActivityChooseCountry"
+            android:name=".activities.ChooseCountryActivity"
             android:label="@string/title_activity_choosecountry"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
